サイドメニューの調整とfooterの追加

--- a/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
+++ b/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
@@ -28,7 +28,7 @@
         <div class="containers">
             <div class="main_container">
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -46,7 +46,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -54,7 +54,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -62,7 +62,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -70,7 +70,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -78,7 +78,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
@@ -86,7 +86,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -94,7 +94,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -102,7 +102,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
@@ -110,7 +110,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -118,7 +118,7 @@
                     <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
-                    <p class="JIN_design">JINのデザイン</p>
+                    <p class="jin_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
                     <div class="blog_texts">
                         <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
@@ -159,9 +159,9 @@
                         <p>＼ Follow me ／</p>
                         <div class="marks">
                             <p class=""><a href="" class=""><i class="fab fa-twitter"></i></a></p>
-                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
-                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
-                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-instagram"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-line"></i></a></p>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                     <div class="block4_container">
                         <p>CATEGORY</p>
                         <select name="カテゴリー" id="">カテゴリー
-                            <option value="カテゴリーを選択">カテゴリー</option>
+                            <option value="カテゴリーを選択">カテゴリーを選択</option>
                             <option value="JINのエディタ">JINのエディタ</option>
                             <option value="JINのエディタ">JINのエディタ</option>
                             <option value="JINのエディタ">JINのエディタ</option>
@@ -208,16 +208,16 @@
                             <p>TAG</p>
                         </div>
                         <div class="tag_title">
-                            <p>SEO</p>
-                            <p>Wordpress</p>
-                            <p>おすすめ機能</p>
-                            <p>エディタ</p>
-                            <p>スマホ</p>
-                            <p>ツール</p>
-                            <p>デザイン</p>
-                            <p>ユーザビリティ</p>
-                            <p>収益化</p>
-                            <p>広告</p>
+                            <p><i class="fas fa-tag"></i>SEO</p>
+                            <p><i class="fas fa-tag"></i>Wordpress</p>
+                            <p><i class="fas fa-tag"></i>おすすめ機能</p>
+                            <p><i class="fas fa-tag"></i>エディタ</p>
+                            <p><i class="fas fa-tag"></i>スマホ</p>
+                            <p><i class="fas fa-tag"></i>ツール</p>
+                            <p><i class="fas fa-tag"></i>デザイン</p>
+                            <p><i class="fas fa-tag"></i>ユーザビリティ</p>
+                            <p><i class="fas fa-tag"></i>収益化</p>
+                            <p><i class="fas fa-tag"></i>広告</p>
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,64 @@
         </div>
     </main>
     <footer>
+        <div class="containers footer_contain">
+            <div class="container1">
+                <div class="container1_1">
+                    <h2>JIN</h2>
+                    <p>読む人も、書く人も、すべてを考え抜いたデザインを実現。真の使いやすさを追求したWordPressテーマです。
 
+                        「アフィリエイト」と「SEO」に必要なものは、すべて詰め込みました。売れるサイト作りを確実に後押しします。</p>
+                    <div class="block1_btn">
+                        <a href="">今すぐダウンロード</a>
+                    </div>
+                </div>
+                <div class="container1_2">
+                    <div class="tag">
+                        <p>TAG</p>
+                    </div>
+                    <div class="tag_title">
+                        <p><i class="fas fa-tag"></i>SEO</p>
+                        <p><i class="fas fa-tag"></i>Wordpress</p>
+                        <p><i class="fas fa-tag"></i>おすすめ機能</p>
+                        <p><i class="fas fa-tag"></i>エディタ</p>
+                        <p><i class="fas fa-tag"></i>スマホ</p>
+                        <p><i class="fas fa-tag"></i>ツール</p>
+                        <p><i class="fas fa-tag"></i>デザイン</p>
+                        <p><i class="fas fa-tag"></i>ユーザビリティ</p>
+                        <p><i class="fas fa-tag"></i>収益化</p>
+                        <p><i class="fas fa-tag"></i>広告</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container2">
+                <h3>CATEGORY</h3>
+                <p>> JINのエディタ</p>
+                <p>> JINのデザイン</p>
+                <p>> JINの特徴</p>
+                <p>> 収益化機能</p>
+            </div>
+            <div class="container3">
+                <h3>ARCHIVES</h3>
+                <p>> 2018年2月</p>
+                <p>> 2018年1月</p>
+                <p>> 2017年12月</p>
+            </div>
+            <div class="container4">
+                <h3>POPULAR POST</h3>
+                <div class="block3_post">
+                    <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
+                </div>
+                <div class="block3_post">
+                    <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                    <p>この記事を書いた人｜ライタープロフィールを作成できる</p>
+                </div>
+                <div class="block3_post">
+                    <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                    <p>ああああああああああああああああああああああああああああああ</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
