--- a/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
+++ b/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
@@ -208,16 +208,16 @@
                             <p>TAG</p>
                         </div>
                         <div class="tag_title">
-                            <p><i class="fas fa-tag"></i>SEO</p>
-                            <p><i class="fas fa-tag"></i>Wordpress</p>
-                            <p><i class="fas fa-tag"></i>おすすめ機能</p>
-                            <p><i class="fas fa-tag"></i>エディタ</p>
-                            <p><i class="fas fa-tag"></i>スマホ</p>
-                            <p><i class="fas fa-tag"></i>ツール</p>
-                            <p><i class="fas fa-tag"></i>デザイン</p>
-                            <p><i class="fas fa-tag"></i>ユーザビリティ</p>
-                            <p><i class="fas fa-tag"></i>収益化</p>
-                            <p><i class="fas fa-tag"></i>広告</p>
+                            <p><a href="#"><i class="fas fa-tag"></i>SEO</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>Wordpress</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>おすすめ機能</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>エディタ</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>スマホ</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>ツール</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>デザイン</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>ユーザビリティ</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>収益化</a></p>
+                            <p><a href="#"><i class="fas fa-tag"></i>広告</a></p>
                         </div>
                     </div>
                 </div>
@@ -263,17 +263,17 @@
                     <div class="tag">
                         <p>TAG</p>
                     </div>
-                    <div class="tag_title">
-                        <p><i class="fas fa-tag"></i>SEO</p>
-                        <p><i class="fas fa-tag"></i>Wordpress</p>
-                        <p><i class="fas fa-tag"></i>おすすめ機能</p>
-                        <p><i class="fas fa-tag"></i>エディタ</p>
-                        <p><i class="fas fa-tag"></i>スマホ</p>
-                        <p><i class="fas fa-tag"></i>ツール</p>
-                        <p><i class="fas fa-tag"></i>デザイン</p>
-                        <p><i class="fas fa-tag"></i>ユーザビリティ</p>
-                        <p><i class="fas fa-tag"></i>収益化</p>
-                        <p><i class="fas fa-tag"></i>広告</p>
+                    <div class="tag_title footer_tag">
+                        <p><a href="#"><i class="fas fa-tag"></i>SEO</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>Wordpress</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>おすすめ機能</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>エディタ</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>スマホ</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>ツール</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>デザイン</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>ユーザビリティ</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>収益化</a></p>
+                        <p><a href="#"><i class="fas fa-tag"></i>広告</a></p>
                     </div>
                 </div>
             </div>
@@ -292,19 +292,22 @@
             </div>
             <div class="container4">
                 <h3>POPULAR POST</h3>
-                <div class="block3_post">
+                <div class="footer_post">
                     <img src="img/shutterstock_377522251-320x180.jpg" alt="">
                     <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
                 </div>
-                <div class="block3_post">
+                <div class="footer_post">
                     <img src="img/shutterstock_377522251-320x180.jpg" alt="">
                     <p>この記事を書いた人｜ライタープロフィールを作成できる</p>
                 </div>
-                <div class="block3_post">
+                <div class="footer_post">
                     <img src="img/shutterstock_377522251-320x180.jpg" alt="">
                     <p>ああああああああああああああああああああああああああああああ</p>
                 </div>
             </div>
+        </div>
+        <div class="copy">
+            <p>&copy;2017-2020 JIN Demo Site 4</p>
         </div>
     </footer>
 </body>
