--- a/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
+++ b/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
@@ -309,6 +309,7 @@
         <div class="copy">
             <p>&copy;2017-2020 JIN Demo Site 4</p>
         </div>
+        <div id="page_top"><a href="#"></a></div>
     </footer>
 </body>
 </html>
